# 3

./: docker-compose.yml  nginx.conf
client/src/: App.jsx
microservice/: CMakeLists.txt
server/: app.js  package-lock.json
service/: CMakeLists.txt  Dockerfile  main.cpp
service/cmake/: Findrestbed.cmake
